--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "style-loader": "^0.13.1",
     "ts-helpers": "^1.1.2",
     "ts-loader": "^1.2.2",
-    "tslint": "3.15.1",
+    "tslint": "^4.0.1",
     "typescript": "^2.0.10",
     "typings": "^2.0.0",
     "webpack": "^1.13.3"
