--- a/package.json
+++ b/package.json
@@ -19,24 +19,25 @@
   "author": "joshwerts@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.2.1",
-    "@angular/compiler": "2.2.1",
-    "@angular/core": "2.2.1",
-    "@angular/forms": "2.2.1",
-    "@angular/http": "2.2.1",
-    "@angular/platform-browser": "2.2.1",
-    "@angular/platform-browser-dynamic": "2.2.1",
-    "@angular/router": "3.2.1",
+    "@angular/common": "2.2.4",
+    "@angular/compiler": "2.2.4",
+    "@angular/core": "2.2.4",
+    "@angular/forms": "2.2.4",
+    "@angular/http": "2.2.4",
+    "@angular/platform-browser": "2.2.4",
+    "@angular/platform-browser-dynamic": "2.2.4",
+    "@angular/router": "3.2.4",
     "bootstrap": "3.3.7",
     "core-js": "2.4.1",
     "jquery": "3.1.1",
-    "reflect-metadata": "0.1.3",
+    "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.12",
-    "zone.js": "0.6.26"
+    "zone.js": "0.6.21"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.34",
+    "@types/core-js": "^0.9.35",
     "@types/jasmine": "^2.5.38",
+    "@types/jquery": "^2.0.34",
     "canonical-path": "0.0.2",
     "concurrently": "^3.1.0",
     "css-loader": "^0.26.0",
