--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "postinstall": "typings install",
     "start": "concurrently \"npm run webpack:w\" \"npm run lite\" ",
+    "build": "webpack -p --progress --colors --minimize",
     "lint": "tslint ./app/**/*.ts -t verbose",
     "test": "karma start",
     "tsc": "tsc",
@@ -12,26 +13,25 @@
     "typings": "typings",
     "webpack": "webpack --progress --colors",
     "webpack:w": "webpack --watch",
-    "lite": "lite-server",
-    "build": "webpack -p --progress"
+    "lite": "lite-server"
   },
   "keywords": [],
   "author": "joshwerts@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.2.4",
-    "@angular/compiler": "2.2.4",
-    "@angular/core": "2.2.4",
-    "@angular/forms": "2.2.4",
-    "@angular/http": "2.2.4",
-    "@angular/platform-browser": "2.2.4",
-    "@angular/platform-browser-dynamic": "2.2.4",
-    "@angular/router": "3.2.4",
+    "@angular/common": "2.4.2",
+    "@angular/compiler": "2.4.2",
+    "@angular/core": "2.4.2",
+    "@angular/forms": "2.4.2",
+    "@angular/http": "2.4.2",
+    "@angular/platform-browser": "2.4.2",
+    "@angular/platform-browser-dynamic": "2.4.2",
+    "@angular/router": "3.4.2",
     "bootstrap": "3.3.7",
     "core-js": "2.4.1",
     "jquery": "3.1.1",
     "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.3",
     "zone.js": "0.6.21"
   },
   "devDependencies": {
@@ -59,10 +59,10 @@
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
     "ts-loader": "^1.2.2",
-    "tslint": "^4.0.1",
-    "typescript": "^2.0.10",
-    "typings": "^2.0.0",
-    "webpack": "^1.13.3"
+    "tslint": "^4.3.1",
+    "typescript": "^2.1.4",
+    "typings": "^2.1.0",
+    "webpack": "^1.14.0"
   },
   "repository": {}
 }
