--- a/bs-config.json
+++ b/bs-config.json
@@ -1,15 +1,20 @@
 {
     "port": 3001,
     "files": [
-        "./**/*.{html,htm,css,js}"
+        "./dist/*.js",
+        "./index.html",
+        "./styles/**/*.css"
     ],
     "server": {
         "baseDir": "./"
     },
+    "injectChanges": true,
     "watchOptions": {
         "ignored": [
             "node_modules",
-            "*.spec.*"
+            "./**/*.spec.*",
+            "typings"
         ]
-    }
+    },
+    "cors": true
 }
