--- a/package.json
+++ b/package.json
@@ -5,34 +5,32 @@
   "scripts": {
     "postinstall": "typings install",
     "start": "concurrently \"npm run webpack:w\" \"npm run lite\" ",
-    "build": "webpack -p --progress --colors --minimize",
-    "lint": "tslint ./app/**/*.ts -t verbose",
-    "test": "karma start",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "typings": "typings",
     "webpack": "webpack --progress --colors",
-    "webpack:w": "webpack --watch",
-    "lite": "lite-server"
+    "webpack:w": "webpack -w",
+    "build": "webpack --env.minimize -p --progress",
+    "lint": "tslint ./app/**/*.ts -t verbose",
+    "lite": "lite-server",
+    "test": "karma start",
+    "typings": "typings"
   },
   "keywords": [],
   "author": "joshwerts@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.4.2",
-    "@angular/compiler": "2.4.2",
-    "@angular/core": "2.4.2",
-    "@angular/forms": "2.4.2",
-    "@angular/http": "2.4.2",
-    "@angular/platform-browser": "2.4.2",
-    "@angular/platform-browser-dynamic": "2.4.2",
-    "@angular/router": "3.4.2",
+    "@angular/common": "2.4.4",
+    "@angular/compiler": "2.4.4",
+    "@angular/core": "2.4.4",
+    "@angular/forms": "2.4.4",
+    "@angular/http": "2.4.4",
+    "@angular/platform-browser": "2.4.4",
+    "@angular/platform-browser-dynamic": "2.4.4",
+    "@angular/router": "3.4.4",
     "bootstrap": "3.3.7",
     "core-js": "2.4.1",
     "jquery": "3.1.1",
-    "reflect-metadata": "0.1.8",
+    "reflect-metadata": "0.1.9",
     "rxjs": "5.0.3",
-    "zone.js": "0.6.21"
+    "zone.js": "0.7.6"
   },
   "devDependencies": {
     "@types/core-js": "^0.9.35",
@@ -48,21 +46,21 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
     "karma-dojo": "0.0.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-jasmine": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.8.0",
+    "karma-webpack": "^2.0.1",
     "lite-server": "^2.2.2",
     "lodash": "^4.17.2",
     "rimraf": "^2.5.4",
     "style-loader": "^0.13.1",
     "to-string-loader": "^1.1.5",
     "ts-helpers": "^1.1.2",
-    "ts-loader": "^1.2.2",
+    "ts-loader": "^2.0.0",
     "tslint": "^4.3.1",
-    "typescript": "^2.1.4",
+    "typescript": "^2.1.5",
     "typings": "^2.1.0",
-    "webpack": "^1.14.0"
+    "webpack": "^2.2.0"
   },
   "repository": {}
 }
