--- a/package.json
+++ b/package.json
@@ -1,66 +1,64 @@
 {
-  "name": "jsapi4angular2-webpack",
+  "name": "angular2-esri-play",
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "postinstall": "typings install",
-    "start": "concurrently \"npm run webpack:w\" \"npm run lite\" ",
-    "webpack": "webpack --progress --colors",
-    "webpack:w": "webpack -w",
-    "build": "webpack --env.minimize -p --progress",
-    "lint": "tslint ./app/**/*.ts -t verbose",
-    "lite": "lite-server",
-    "test": "karma start",
-    "typings": "typings"
+    "start": "npm run build & webpack-dev-server --config ./webpack/webpack.config.js --inline --progress --port 8080",
+    "build": "webpack --config ./webpack/webpack.config.js --progress --colors",
+    "dist": "webpack --config ./webpack/webpack.config.js --progress --colors --env.minimize",
+    "watch": "webpack --config ./webpack/webpack.config.js --watch",
+    "webpack": "webpack --config ./webpack/webpack.config.js",
+    "test": "karma start"
   },
   "keywords": [],
   "author": "joshwerts@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "@angular/common": "2.4.4",
-    "@angular/compiler": "2.4.4",
-    "@angular/core": "2.4.4",
-    "@angular/forms": "2.4.4",
-    "@angular/http": "2.4.4",
-    "@angular/platform-browser": "2.4.4",
-    "@angular/platform-browser-dynamic": "2.4.4",
-    "@angular/router": "3.4.4",
+    "@angular/common": "4.4.2",
+    "@angular/compiler": "4.4.2",
+    "@angular/core": "4.4.2",
+    "@angular/forms": "4.4.2",
+    "@angular/http": "4.4.2",
+    "@angular/platform-browser": "4.4.2",
+    "@angular/platform-browser-dynamic": "4.4.2",
+    "@angular/router": "4.4.2",
     "bootstrap": "3.3.7",
-    "core-js": "2.4.1",
-    "jquery": "3.1.1",
-    "reflect-metadata": "0.1.9",
-    "rxjs": "5.0.3",
-    "zone.js": "0.7.6"
+    "core-js": "2.5.1",
+    "jquery": "3.2.1",
+    "reflect-metadata": "0.1.10",
+    "rxjs": "5.4.2",
+    "zone.js": "0.8.17"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.35",
-    "@types/jasmine": "^2.5.38",
-    "@types/jquery": "^2.0.34",
+    "@types/arcgis-js-api": "4.4.0",
+    "@types/core-js": "0.9.35",
+    "@types/dojo": "^1.9.38",
+    "@types/jasmine": "2.5.38",
+    "@types/jquery": "3.2.12",
+    "@types/node": "7.0.5",
     "canonical-path": "0.0.2",
-    "concurrently": "^3.1.0",
-    "css-loader": "^0.26.0",
-    "html-loader": "^0.4.4",
-    "jasmine-core": "~2.5.2",
-    "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
+    "css-loader": "0.28.7",
+    "html-loader": "0.5.1",
+    "jasmine-core": "2.8.0",
+    "json-loader": "0.5.7",
+    "karma": "1.7.1",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-cli": "1.0.1",
     "karma-dojo": "0.0.1",
-    "karma-jasmine": "^1.1.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^2.0.1",
-    "lite-server": "^2.2.2",
-    "lodash": "^4.17.2",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.5",
-    "ts-helpers": "^1.1.2",
-    "ts-loader": "^2.0.0",
-    "tslint": "^4.3.1",
-    "typescript": "^2.1.5",
-    "typings": "^2.1.0",
-    "webpack": "^2.2.0"
+    "karma-jasmine": "1.1.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-spec-reporter": "0.0.31",
+    "karma-webpack": "2.0.4",
+    "lodash": "4.17.4",
+    "rimraf": "2.6.2",
+    "style-loader": "^0.18.2",
+    "to-string-loader": "1.1.5",
+    "ts-helpers": "1.1.2",
+    "ts-loader": "2.3.7",
+    "tslint": "5.7.0",
+    "typescript": "2.5.2",
+    "webpack": "3.6.0",
+    "webpack-dev-server": "2.8.2"
   },
   "repository": {}
 }
